--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-async-handler": "^1.2.0",
     "firebase-admin": "^11.11.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.0.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
